--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,6 +22,15 @@ body, .marker-cluster, .marker-cluster div {
     align-items: center;
     transition-duration: 300ms;
 }
+
+.bus {
+    background-color: #126400;
+}
+
+.bus > .tooltip-vehicle {
+    background-color: #0B3D00;
+}
+
 .tooltip-vehicle {
     font-family: 'Noto Sans Display', sans-serif;
     background-color: #0d487b;
@@ -101,7 +110,7 @@ p.icon {
     position: absolute;
     bottom:0;
     width:100%;
-    height:60%;
+    height:40%;
     background-color: white;
     z-index: 5000;
     border-radius: 1rem 1rem 0 0;
