--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,6 +31,14 @@ body, .marker-cluster, .marker-cluster div {
     background-color: #0B3D00;
 }
 
+.static {
+    background-color: #535353 !important;
+}
+
+.static > .tooltip-vehicle {
+    background-color: #3C3C3C !important;
+}
+
 .tooltip-vehicle {
     font-family: 'Noto Sans Display', sans-serif;
     background-color: #0d487b;
