--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,7 +20,7 @@ body, .marker-cluster, .marker-cluster div {
     display: flex !important;
     justify-content: center;
     align-items: center;
-    transition-duration: 300ms;
+    transition: 5000ms ease-in-out;
 }
 
 .bus {
@@ -58,7 +58,7 @@ p.icon {
     padding: 0;
     margin: 0;
     font-weight: bold;
-}   
+}
 
 .font-special {
     font-family: 'Noto Sans Display', sans-serif;
@@ -257,9 +257,9 @@ p.icon {
 }
 
 .route_name_number {
-    font-weight: bold; 
+    font-weight: bold;
     font-size:1rem;
-    background-color:#0071ae; 
+    background-color:#0071ae;
     color:white;
     border-radius: .2rem;
     padding-left: .5rem;
@@ -287,7 +287,7 @@ p.icon {
     border-right: 1px solid #CED4DA;
 }
 
-@-webkit-keyframes blinker {  
+@-webkit-keyframes blinker {
     0% { opacity: 1.0; }
     50% { opacity: 0.0; }
     100% { opacity: 1.0; }
@@ -299,10 +299,9 @@ div.data::-webkit-scrollbar {
     display: none !important;
     background: transparent;
   }
-  
+
   /* Hide scrollbar for IE, Edge and Firefox */
   div.data {
     -ms-overflow-style: none !important;  /* IE and Edge */
     scrollbar-width: none !important;  /* Firefox */
   }
-  
